Fix single blog page overflow, add pagelinks to footer.

--- a/assets/sass/2-components/_blog-single.scss
+++ b/assets/sass/2-components/_blog-single.scss
@@ -5,7 +5,7 @@
 
 .section-single-blog {
     @include flexCenter;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-color: var(--color-white);
 }
